[project]
name = "latent-diffusion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.8",
    "einops>=0.8.1",
    "google>=3.0.0",
    "imageio>=2.37.0",
    "imageio-ffmpeg>=0.6.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "kornia>=0.8.1",
    "lightning>=2.5.2",
    "natsort>=8.4.0",
    "notebook>=7.4.4",
    "omegaconf>=2.3.0",
    "opencv-python>=4.12.0.88",
    "pudb>=2025.1",
    "pytorch-lightning>=2.5.2",
    "streamlit>=1.46.1",
    "test-tube>=0.7.5",
    "torch>=2.7.1",
    "torch-fidelity>=0.3.0",
    "torchvision>=0.22.1",
    "transformers>=4.53.1",
]
